e2e/echoserver/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: echoserver
